# evident-backend

./: .dockerignore  .env.example  .gitignore  .vercelignore  ARCHITECTURE.md  Caddyfile  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  vercel.json
apps/api/: alembic.ini
apps/api/alembic/: env.py
apps/api/alembic/versions/: 5e4c216416ba_initial_schema_users_products_reviews_.py
apps/api/src/: main.py
apps/api/src/core/: config.py  database.py  redis.py  security.py
apps/api/src/models/: __init__.py  base.py  models.py
apps/api/src/routers/: auth.py  crawl.py  product.py  products.py  reviews.py
apps/api/src/services/: cache.py  entity_resolver.py  orchestrator.py  rate_limiter.py
graphify-out/: .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
pipelines/: verdict.py
pipelines/crawlers/: __init__.py  amazon.py  base.py  factory.py  instagram.py  reddit.py  tiktok.py  youtube.py
pipelines/crawlers/core/: __init__.py  base.py  crawler.py
pipelines/crawlers/strategies/: __init__.py  api.py  apify.py  scrape.py
pipelines/sentiment/: fallback.py  provider.py  service.py
tests/: test_amazon_crawler.py  test_auth.py  test_health.py  test_rate_limiter.py  test_reddit_crawler.py  test_sentiment.py  test_youtube_crawler.py
