[tool.poetry]
name = "evident-backend"
version = "0.1.0"
description = "ReviewAgg - Cross-Platform Review Aggregator"
authors = ["Samrat"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
asyncpg = "^0.30.0"
alembic = "^1.13.1"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
redis = "^5.0.3"
rapidfuzz = "^3.8.1"
celery = "^5.3.6"
mangum = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
