[project]
name = "evident-backend"
version = "0.1.0"
description = "Evident — Cross-Platform Product Review Aggregator"
requires-python = ">=3.12"
authors = [{name = "Samrat"}]
readme = "README.md"

dependencies = [
    # API framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sse-starlette>=2.1.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # Validation & settings
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",

    # Cache & rate limiting
    "redis>=5.2.0",

    # HTTP client for crawlers
    "aiohttp>=3.11.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "google-auth>=2.36.0",
    "requests>=2.32.0",

    # Entity resolution
    "rapidfuzz>=3.10.0",
]

[project.optional-dependencies]
ml = [
    # Sentiment analysis — heavy deps, Phase 4
    "transformers>=4.46.0",
    "torch>=2.5.0",
]
orchestration = [
    # Prefect — Phase 6
    "prefect>=3.1.0",
]
dev = [
    "debugpy>=1.8.20",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "respx>=0.22.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps", "pipelines"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
